force-app/main/default/objects/Order/fields/Total_Project_Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Volunteer_Hours__c</fullName>
    <inlineHelpText>Total hours for all volunteers used to complete the project(s).</inlineHelpText>
    <label>Total Project Volunteer Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>