force-app/main/default/objects/Order/fields/Total_Retail_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Retail_Amount__c</fullName>
    <label>Retail Amount</label>
    <summarizedField>OrderItem.Order_Tool_Retail_Price__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>