force-app/main/default/objects/Order/fields/Volunteer_Source__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Source__c</fullName>
    <inlineHelpText>Source of Volunteers</inlineHelpText>
    <label>Volunteer Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Community Volunteers</fullName>
            </value>
            <value>
                <fullName>Corporate Volunteers</fullName>
            </value>
            <value>
                <fullName>Faith-based Volunteers</fullName>
            </value>
            <value>
                <fullName>Youth/Student Volunteers</fullName>
            </value>
            <value>
                <fullName>Veteran Volunteers</fullName>
            </value>
            <value>
                <fullName>Agency Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>