force-app/main/default/objects/Order/fields/Volunteer_Source_Migration__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Source_Migration__c</fullName>
    <label>Volunteer Source Migration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>