force-app/main/default/objects/Order/fields/Waived__c.field-meta.xml
<CustomField>
    <fullName>Waived__c</fullName>
    <label>Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>