force-app/main/default/objects/Order/fields/Waived_External_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Waived_External_Sponsor__c</fullName>
    <label>Waived External Sponsor_LFNt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>