force-app/main/default/objects/Order/fields/Waived_Internal_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Waived_Internal_Promotion__c</fullName>
    <label>Waived Internal Promotion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>