force-app/main/default/objects/Order/fields/Waived_Retroaction__c.field-meta.xml
<CustomField>
    <fullName>Waived_Retroaction__c</fullName>
    <label>Waived Retroaction_LFNt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>