force-app/main/default/objects/Order/validationRules/Require_Deliver_Addr_when_delivery_selec.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Deliver_Addr_when_delivery_selec</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Pickup_Delivery_Location__r.Type__c ) = &quot;Delivery&quot; &amp;&amp;  ISBLANK( Delivery_Address__c )</errorConditionFormula>
    <errorMessage>Please provide Delivery Address for this order.</errorMessage>
</ValidationRule>