force-app/main/default/objects/Order/validationRules/Require_Deliver_info_when_delivery_selec.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Deliver_info_when_delivery_selec</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Pickup_Delivery_Location__r.Type__c ) = &quot;Delivery&quot; &amp;&amp;  ISBLANK(Delivery_Info__c )</errorConditionFormula>
    <errorMessage>Please provide Delivery Information for this order.</errorMessage>
</ValidationRule>