force-app/main/default/objects/Order/listViews/All_Open_Orders.listView-meta.xml
<ListView>
    <fullName>All_Open_Orders</fullName>
    <columns>ORDER.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.END_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Affiliate__c</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>notEqual</operation>
        <value>Unpaid,Closed,Cancelled,Cancelled_original</value>
    </filters>
    <label>All Open Orders (no unpaid)</label>
</ListView>