force-app/main/default/objects/Order/listViews/All_Open_Orders_PR.listView-meta.xml
<ListView>
    <fullName>All_Open_Orders_PR</fullName>
    <columns>ORDER.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Schedule_Return_Date__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Fulfilled,Partially Returned,Closed</value>
    </filters>
    <filters>
        <field>Affiliate__c</field>
        <operation>contains</operation>
        <value>Puerto Rico</value>
    </filters>
    <label>All Open Orders - PR</label>
    <sharedTo>
        <group>Admins</group>
        <group>TDS_Puerto_Rico_ToolBank</group>
    </sharedTo>
</ListView>