force-app/main/default/objects/Order/listViews/All_Orders_Southwest_Territory.listView-meta.xml
<ListView>
    <fullName>All_Orders_Southwest_Territory</fullName>
    <columns>ORDER.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>ORDERS.END_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Affiliate__c</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Affiliate__c</field>
        <operation>equals</operation>
        <value>TDS Hub-Southeast Territory</value>
    </filters>
    <label>All Orders-Southwest Territory</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>