force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDER.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>ORDERS.END_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Affiliate__c</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>