force-app/main/default/objects/Order/listViews/Closed.listView-meta.xml
<ListView>
    <fullName>Closed</fullName>
    <columns>ORDER.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Total_Handling_Fees__c</columns>
    <columns>Order_Close_Date__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Affiliate__c</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed</label>
</ListView>