force-app/main/default/objects/Order/listViews/Confirmed.listView-meta.xml
<ListView>
    <fullName>Confirmed</fullName>
    <columns>ORDER.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Scheduled_Pickup_Time__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>Confirmed</label>
</ListView>