force-app/main/default/objects/Order/listViews/Fulfilled.listView-meta.xml
<ListView>
    <fullName>Fulfilled</fullName>
    <columns>ORDER.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Affiliate__c</columns>
    <columns>Actual_Pickup_Date_Time__c</columns>
    <columns>ORDERS.END_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Fulfilled</value>
    </filters>
    <label>Fulfilled</label>
</ListView>