force-app/main/default/objects/Order/listViews/Overdue.listView-meta.xml
<ListView>
    <fullName>Overdue</fullName>
    <columns>ORDER.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.END_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Amount_Owed__c</columns>
    <columns>Days_till_Overdue_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Overdue</value>
    </filters>
    <label>Overdue</label>
</ListView>