force-app/main/default/objects/Order/listViews/Pickups_in_the_Next_7_Days.listView-meta.xml
<ListView>
    <fullName>Pickups_in_the_Next_7_Days</fullName>
    <columns>ORDER.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.EFFECTIVE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:7,TODAY</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>Pickups in the Next 7 Days</label>
</ListView>